--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ img {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2.5rem;
   position: relative;
+  margin-bottom: 3rem;
 }
 
 .service {
@@ -306,15 +307,121 @@ img {
 }
 
 .brands {
-  margin-top: 100px;
-  justify-content: center;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
+ display: flex;
+ flex-wrap: wrap;
+ margin: 3rem 0rem;
 }
 
 .brands span {
-  color: var(--font); 
-  text-align: center;
+  color: var(--font);   
   font-size: 4rem;
-  margin: .1rem 0rem;
+  margin: auto;
 }
+
+
+/* Contato */
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 53% 47%;
+}
+
+.contact-grid {
+  display: grid;
+  grid-template-columns: 55% 40%;
+  grid-gap: 3rem;
+  align-items: center;
+}
+
+.form-title h2 {
+  color: #fff;
+  font-size: 2.5rem;
+  margin-top: 3rem;
+}
+
+.form-title h2 span {
+  padding-top: 1rem;
+  border-top: 5px solid var(--main);
+}
+
+
+.form-title small {
+  color: var(--font);
+}
+
+.form-group {
+  margin-bottom: 1rem;
+}
+
+.form_control {
+  height: 45px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  background: transparent;
+  width: 100%;
+  padding: .5rem 1rem;
+}
+
+.form-group button {
+  padding: .5rem 2.5rem;
+  color: var(--font);
+  background: var(--main);
+  border: 1px solid var(--main);
+  font-weight: 700;
+}
+
+.form-progress {
+  margin: 2.8rem 0rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  position: relative;
+  border-radius: 5px;
+}
+
+.progress div {
+  width: 100%;
+  height: 10px;
+  background: var(--bg-accent);
+  position: relative;
+}
+
+.progress div span:last-child {
+  width: 30px;
+  height: 30px;
+  z-index: 20;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--bg-accent);
+  display: grid;
+  place-items: center;
+  color: var(--font);
+  font-weight: 600;
+}
+
+.progress.active div span:first-child {
+  background: var(--main);
+  width: 50%;
+  height: 10px;
+  position: absolute;
+  z-index: 5;
+  left: 0;
+  top: 0;
+}
+
+.contact-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 10rem;
+  width: 370px;
+  height: 280px;
+}
+
+footer {
+  background: var(--bg-accent);
+}
+
+
+
